force-app/main/default/objects/Product2/fields/Additional_Charge_Of__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For additional charge products (usage/overage): lookup to the parent committed-usage product. When the parent is added to a quote, this product is auto-added alongside it.</description>
    <label>Additional Charge Of</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>