force-app/main/default/objects/Product2/fields/Asset_Creation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Asset_Creation_Mode__c</fullName>
    <label>Asset Creation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PER_UNIT</fullName>
                <label>Per Unit</label>
            </value>
            <value>
                <fullName>PER_LINE</fullName>
                <label>Per Line</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>