force-app/main/default/objects/Product2/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <description>The product attribute category from Odoo (e.g., Draw Cap in kVA). When populated, the quote line editor shows an attribute selector for this product. Maps to Odoo Product Attribute Type.</description>
    <inlineHelpText>The type of attribute this product has (e.g., Draw Cap in kVA). Drives the attribute selector on quote lines.</inlineHelpText>
    <label>Product Attribute Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>