force-app/main/default/objects/Product2/fields/Attribute_Values__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Values__c</fullName>
    <description>Comma-separated valid attribute values for this product (e.g., 2kVA,3kVA,4kVA,5kVA,6kVA). Used by the quote line editor to populate the attribute selector. Values sourced from Odoo Product Attribute Combinations.</description>
    <inlineHelpText>Valid attribute values for this product, comma-separated. Controls what options appear in the attribute selector on quote lines.</inlineHelpText>
    <label>Product Attribute Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>