force-app/main/default/objects/Product2/fields/Available_Countries__c.field-meta.xml
<CustomField>
    <fullName>Available_Countries__c</fullName>
    <description>Countries where this product is available across all sites. Used by Pricebook Sync to auto-create PricebookEntries in site pricebooks.</description>
    <label>Available Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JP</fullName>
                <label>Japan</label>
            </value>
            <value>
                <fullName>KR</fullName>
                <label>Korea</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>Indonesia</label>
            </value>
            <value>
                <fullName>PH</fullName>
                <label>Philippines</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>India</label>
            </value>
            <value>
                <fullName>TH</fullName>
                <label>Thailand</label>
            </value>
            <value>
                <fullName>MY</fullName>
                <label>Malaysia</label>
            </value>
            <value>
                <fullName>SG</fullName>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>HK</fullName>
                <label>Hong Kong</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>