force-app/main/default/objects/Product2/fields/Available_Operation_Site__c.field-meta.xml
<CustomField>
    <fullName>Available_Operation_Site__c</fullName>
    <description>Operation sites where this product can be sold. Controls product selectability in the quote line editor per site. Sourced from Odoo Available Operation Site field.</description>
    <label>Available Operation Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BKK1</fullName>
            </value>
            <value>
                <fullName>BKK2</fullName>
            </value>
            <value>
                <fullName>BOM1</fullName>
            </value>
            <value>
                <fullName>BOM2</fullName>
            </value>
            <value>
                <fullName>BOM3</fullName>
            </value>
            <value>
                <fullName>CGK1</fullName>
            </value>
            <value>
                <fullName>CGK2</fullName>
            </value>
            <value>
                <fullName>CGK7</fullName>
            </value>
            <value>
                <fullName>JKT1</fullName>
            </value>
            <value>
                <fullName>JKT2</fullName>
            </value>
            <value>
                <fullName>MNL1</fullName>
            </value>
            <value>
                <fullName>OSA1</fullName>
            </value>
            <value>
                <fullName>OSA2</fullName>
            </value>
            <value>
                <fullName>PEK1</fullName>
            </value>
            <value>
                <fullName>PUS1</fullName>
            </value>
            <value>
                <fullName>SEL1</fullName>
            </value>
            <value>
                <fullName>SEL2</fullName>
            </value>
            <value>
                <fullName>SEL3</fullName>
            </value>
            <value>
                <fullName>SHAP1</fullName>
            </value>
            <value>
                <fullName>TYO1</fullName>
            </value>
            <value>
                <fullName>TYO2</fullName>
            </value>
            <value>
                <fullName>TYO3</fullName>
            </value>
            <value>
                <fullName>TYO4</fullName>
            </value>
            <value>
                <fullName>TYO5</fullName>
            </value>
            <value>
                <fullName>TYO6</fullName>
            </value>
            <value>
                <fullName>TYO7</fullName>
            </value>
            <value>
                <fullName>CGK8</fullName>
            </value>
            <value>
                <fullName>CGK3</fullName>
            </value>
            <value>
                <fullName>BOM4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>