force-app/main/default/objects/Product2/fields/Billing_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Charge_Type__c</fullName>
    <description>Determines whether this product is billed in advance or in arrears. ADVANCE = billed before service period, ARREAR = billed after. Drives SBI approval logic and Odoo invoice timing.</description>
    <label>Billing Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADVANCE</fullName>
                <default>true</default>
                <label>ADVANCE</label>
            </value>
            <value>
                <fullName>ARREAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>