force-app/main/default/objects/Product2/fields/Capacity_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Assignment__c</fullName>
    <label>Capacity Assignment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>