force-app/main/default/objects/Product2/fields/Charge_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Charge_Frequency__c</fullName>
    <description>How the product is charged: Monthly (recurring), One-Time (single charge), or Usage-Based (metered).</description>
    <label>Charge Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Usage-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>