force-app/main/default/objects/Product2/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Usage-Based</fullName>
            </value>
            <value>
                <fullName>Additional Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>