force-app/main/default/objects/Product2/fields/Customer_Tax__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tax__c</fullName>
    <label>Customer Tax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Zero Rated</fullName>
            </value>
            <value>
                <fullName>Reverse Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>