force-app/main/default/objects/Product2/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Alternative display name for the product. Shown in quote templates and customer-facing documents when populated.</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>