force-app/main/default/objects/Product2/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Unique external identifier for product data sync (e.g. PROD_CCL006_RC). Used as upsert key for data imports.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>