force-app/main/default/objects/Product2/fields/Is_Assetizable__c.field-meta.xml
<CustomField>
    <fullName>Is_Assetizable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Assetizable</label>
    <type>Checkbox</type>
</CustomField>