force-app/main/default/objects/Product2/fields/Merge_IB_Task__c.field-meta.xml
<CustomField>
    <fullName>Merge_IB_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the integration merges IB (Installation Base) tasks for this product instead of creating separate tasks. Sourced from Odoo product configuration.</description>
    <label>Merge IB Task</label>
    <type>Checkbox</type>
</CustomField>