force-app/main/default/objects/Product2/fields/NRC_Type__c.field-meta.xml
<CustomField>
    <fullName>NRC_Type__c</fullName>
    <description>NRC classification. NRCMRC = paired with an MRC product (installation fee). Standalone = independent one-time charge. Only relevant when Charge_Type__c = NRC.</description>
    <label>NRC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRCMRC</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>