force-app/main/default/objects/Product2/fields/Odoo_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Odoo Product ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>