force-app/main/default/objects/Product2/fields/Operating_Sites__c.field-meta.xml
<CustomField>
    <fullName>Operating_Sites__c</fullName>
    <label>Operating Sites</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TYO1</fullName>
            </value>
            <value>
                <fullName>TYO2</fullName>
            </value>
            <value>
                <fullName>TYO3</fullName>
            </value>
            <value>
                <fullName>TYO4</fullName>
            </value>
            <value>
                <fullName>TYO5</fullName>
            </value>
            <value>
                <fullName>TYO6</fullName>
            </value>
            <value>
                <fullName>TYO7</fullName>
            </value>
            <value>
                <fullName>OSA1</fullName>
            </value>
            <value>
                <fullName>OSA2</fullName>
            </value>
            <value>
                <fullName>SEL1</fullName>
            </value>
            <value>
                <fullName>SEL2</fullName>
            </value>
            <value>
                <fullName>SEL3</fullName>
            </value>
            <value>
                <fullName>PUS1</fullName>
            </value>
            <value>
                <fullName>JKT1</fullName>
            </value>
            <value>
                <fullName>JKT2</fullName>
            </value>
            <value>
                <fullName>CGK1</fullName>
            </value>
            <value>
                <fullName>MNL1</fullName>
            </value>
            <value>
                <fullName>BKK1</fullName>
            </value>
            <value>
                <fullName>BOM1</fullName>
            </value>
            <value>
                <fullName>BOM2</fullName>
            </value>
            <value>
                <fullName>PEK1</fullName>
            </value>
            <value>
                <fullName>SHAP1</fullName>
            </value>
            <value>
                <fullName>HKG1</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <label>All Sites</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>