force-app/main/default/objects/Product2/fields/Paired_NRC_Product__c.field-meta.xml
<CustomField>
    <fullName>Paired_NRC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For MRC products: lookup to the paired NRC (installation/one-time charge) product. Drives automatic NRC line creation on quotes via NrcPairingService. Set via Product Manager.</description>
    <label>Paired NRC Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MRC Pairs</relationshipLabel>
    <relationshipName>MRC_Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>