force-app/main/default/objects/Product2/fields/Phase1_Active__c.field-meta.xml
<CustomField>
    <fullName>Phase1_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phase 1 Active</label>
    <type>Checkbox</type>
</CustomField>