force-app/main/default/objects/Product2/fields/Product_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute__c</fullName>
    <description>Product attribute types that require user input on quote lines. Drives the attribute selector UI (e.g. kVA draw cap picker, Z-side site selector). Sourced from Odoo Product Attribute.</description>
    <label>Product Attribute</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amps</fullName>
            </value>
            <value>
                <fullName>Bandwidth</fullName>
            </value>
            <value>
                <fullName>Connector Type</fullName>
            </value>
            <value>
                <fullName>Draw Cap in kVA</fullName>
            </value>
            <value>
                <fullName>Draw Cap in kW</fullName>
            </value>
            <value>
                <fullName>Number of Cores</fullName>
            </value>
            <value>
                <fullName>Z-side Operation Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>