force-app/main/default/objects/Product2/fields/Ramp_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Behavior__c</fullName>
    <label>Ramp Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Linear</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>