force-app/main/default/objects/Product2/fields/Service_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Service_Tracking__c</fullName>
    <label>Service Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>