force-app/main/default/objects/Product2/fields/Show_Custom_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Show_Custom_Attribute_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the quote line editor shows a free-form numeric input for custom attribute values (e.g. PUE consumption, kW draw). The entered value is stored on QuoteLineItem.Custom_Attribute_Value__c.</description>
    <label>Show Custom Attribute Value</label>
    <type>Checkbox</type>
</CustomField>