force-app/main/default/objects/Product2/fields/Standard_Product__c.field-meta.xml
<CustomField>
    <fullName>Standard_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks products that are standard catalog items (not customer-specific or custom-priced). Standard products appear in all pricebooks by default.</description>
    <label>Standard Product</label>
    <type>Checkbox</type>
</CustomField>