force-app/main/default/objects/Product2/fields/Subscription_Product__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Product</label>
    <type>Checkbox</type>
</CustomField>