force-app/main/default/objects/Product2/fields/Subscription_Template__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Template__c</fullName>
    <description>Odoo subscription template reference (e.g. MON - Monthly, ANN - Annual). Maps to the ns_subscription_management field in Odoo for recurring billing setup.</description>
    <label>Subscription Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>