force-app/main/default/objects/Product2/fields/Tied_Product_RC__c.field-meta.xml
<CustomField>
    <fullName>Tied_Product_RC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For NRC products: lookup to the paired MRC (recurring charge) product. Reverse of Paired_NRC_Product__c. Used for bidirectional product tie navigation in the Product Manager.</description>
    <label>Tied Product (RC)</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NRC Pairs</relationshipLabel>
    <relationshipName>NRC_Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>