force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Odoo_Product_Id__c</columns>
    <columns>Capacity_Assignment__c</columns>
    <columns>Available_Countries__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <language>en_US</language>
</ListView>